2001-11-07  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/ralloc.c (packRegsForHLUse): Banned IFXs from being packed into HL.
	(packRegsForHLUse): Added rule to pack address of/pointer get for itemps into HL for the Z80.
	(packRegsForAccUse2): Added rule to pack hbit IFXs into A.

	* src/z80/main.c (_setDefaultOptions): Made float code re-entrant by default.

	* src/z80/gen.c (aopGetLitWordLong): Added word support for floats.
	(genNotFloat): Added.
	(genUminusFloat): Added.

	* device/lib/z80/Makefile: Added floating pt stubs.

	* device/lib/Makefile.in (Z80SOURCES): Added floating pt support.

	* src/z80/gen.c (genIpush): Fixed up a push of one byte when left is in a pair.

	* device/lib/_fsadd.c (__fsadd): Fixed up return where the numbers are hugely different.

2001-11-07  Bernhard Held  <bernhard@bernhardheld.de>

	* sdcc/sim/ucsim/s51.src/glob.cc: Minor fix.

	* sdcc/sim/ucsim/s51.src/regs51.h: Minor fix.

	* sdcc/support/regression/Makefile: Add port ds390.

	* sdcc/support/regression/ports/mcs51/spec.mk: Minor change.

	* sdcc/support/regression/ports/z80/spec.mk: Minor change.

	* sdcc/support/regression/ports/ds390/spec.mk: Added.

	* sdcc/support/regression/ports/ds390/support.c: Added.

	* sdcc/support/regression/ports/ds390/uCsim.cmd: Added.

	* sdcc/support/regression/ports/mcs51/timeout.c: Cut.

	* sdcc/support/regression/fwk/lib/timeout.c: Paste.

2001-11-04  Michael Hope  <michaelh@juju.net.nz>

	* device/include/malloc.h: Added z80 and gbz80 support.

	* device/lib/gbz80/heap.s: Added.

	* device/lib/z80/heap.s: Added.

	* device/lib/malloc.c: Added z80 and gbz80 support.

	* support/regression/tests/malloc.c (testMalloc): Added.

	* src/SDCCmain.c (parseCmdLine): Added support for -Wp.

	* support/regression/tests/bug-478094.c: Added.

	* src/z80/gen.c (commitPair): Fixed silly gbz80/z80 commit to static bug.

2001-11-04  Bernhard Held  <bernhard@bernhardheld.de>
